Finding secondlargest number demo